[package]
name = "oxalslien"
version = "0.1.0"
edition = "2021"
description = "ALIEN-inspired claim verification and finality probability simulator"
license = "MIT"
repository = "https://github.com/JROChub/oxalslien"
homepage = "https://github.com/JROChub/oxalslien"
documentation = "https://docs.rs/oxalslien"

[dependencies]
rand = "0.8"
